# gnnfree

./: .gitignore  README.md  api.html  example.py  genindex.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
_sources/: usage.rst.txt
docs/: .buildinfo  CNAME  api.html  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  searchindex.js  usage.html
docs/_sources/: api.rst.txt  index.rst.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/source/api/: gnnfree.nn.rst  gnnfree.rst  gnnfree.utils.rst
docs/utils/: pooling.html
examples/exp_graph_classification/: run.py
managers/: learner.py  manager.py  trainer.py
nn/: loss.py  pooling.py
nn/models/: GNN.py  basic_models.py  gnn_layers.py  task_predictor.py
src/gnnfree/: __init__.py
src/gnnfree/nn/: loss.py  pooling.py  resolver.py
src/gnnfree/nn/models/: GNN.py  __init__.py  dgl.py  pyg.py  task_predictor.py  util_model.py
src/gnnfree/utils/: datasets.py  evaluators.py  graph.py  io.py  utils.py
utils/: datasets.py  evaluators.py  graph.py  io.py  utils.py
