[metadata]
name = gnnfree
version = 0.0.0
author = Lecheng Kong
author_email = jerry.kong@wustl.edu
description = Integrated GNN development toolbox.
# long_description = file: README.md
url = https://github.com/woodcutter1998/gnnfree
license = MIT

[options]
python_requires = >=3.7
install_requires=
    numpy
    dgl
    torch
    scikit-learn
    tqdm
